--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -34,6 +34,7 @@
 \input{at}
 \input{pathcontrol}
 \input{problemstyle}
+\input{problemoptions}
 \input{envcontrol}
 \input{squeeze}
 \input{setbuilder}
