--- a/exercises/secondexercise.tex
+++ b/exercises/secondexercise.tex
@@ -1,33 +1,33 @@
 %!TEX root = ../example.tex
 \begin{intro}
-  In this exercise, we'll be looking at \( \dots \)
+	In this exercise, we'll be looking at \( \dots \)
 \end{intro}
 \begin{problem}
   Second exercise - problem this is not a chosen problem.
 \end{problem}
+\nextproblem{hide}
 \begin{problem}
-  Second exercise - this is not a chosen problem
+  HIDDENSecond exercise - this is not a chosen problem
 \end{problem}
 \begin{solution}
-SOLUTION2
+	SOLUTION2
 \end{solution}
-
 \begin{problem}
   \lipsum[1]
-\pplabel{TST}
-  \begin{verbatim}
-    VERBATIMTEXT3
+  \pplabel{TST}
+\begin{verbatim}
+      VERBATIMTEXT3
   \end{verbatim}
-\begin{solution}
-SOLUTION3
-\end{solution}
-\end{problem}
-\begin{problem}
-  \ppref{TST}\lipsum[2-3]
 \end{problem}
 \begin{solution}
-SOLUTION4
+	SOLUTION3
 \end{solution}
 \begin{problem}
-  \lipsum[4]
+\ppref{TST}\lipsum[2-3]
+\end{problem}
+\begin{solution}
+	SOLUTION4
+\end{solution}
+\begin{problem}
+\lipsum[4]
 \end{problem}
