Added tagging and options

--- a/exercises/secondexercise.tex
+++ b/exercises/secondexercise.tex
@@ -2,18 +2,20 @@
 \begin{intro}
 	In this exercise, we'll be looking at \( \dots \)
 \end{intro}
+\nextproblem{tag=Y}
 \begin{problem}
-  Second exercise - problem this is not a chosen problem.
+  Y:Second exercise - problem this is not a chosen problem.
 \end{problem}
-\nextproblem{hide}
+\nextproblem{tag=Y}
 \begin{problem}
-  HIDDENSecond exercise - this is not a chosen problem
+  Y:Second exercise - this is not a chosen problem
 \end{problem}
 \begin{solution}
 	SOLUTION2
 \end{solution}
+\nextproblem{tag=N}
 \begin{problem}
-  \lipsum[1]
+  N:\lipsum[1]
   \pplabel{TST}
 \begin{verbatim}
       VERBATIMTEXT3
@@ -22,8 +24,9 @@
 \begin{solution}
 	SOLUTION3
 \end{solution}
+\nextproblem{tag=N}
 \begin{problem}
-\ppref{TST}\lipsum[2-3]
+N:\ppref{TST}\lipsum[2-3]
 \end{problem}
 \begin{solution}
 	SOLUTION4
