--- a/src/exbankpack.tex
+++ b/src/exbankpack.tex
@@ -4,6 +4,7 @@
 %:§makingSets=Making sets
 %:§config=Configuration and options
 %:§lang=Internationalization
+%:§problemopts=Problem options and tagging
 %:§triggers=Triggers
 %:§ref=General reference
 %:§count=Counters
