--- a/src/main.tex
+++ b/src/main.tex
@@ -15,15 +15,17 @@
 \def\hello{\textbf{Hello}}
 \def\asdf#1{\@latex@warning{Called hello}#1}
 % Testing all makeset functions
-\makeset[nohead,intro]{11}{%
-\phead,
-\exclude{secondexercise}{2,3},
-\pbreak,
-\phead,
-\exec{\textbf{hello}},
-firstexercise,
-\select{thirdexercise}{1,2}%
-}
+\makeset{11}{secondexercise}
+
+% \makeset[nohead,intro]{11}{%
+% \phead,
+% \exclude{secondexercise}{2,3},
+% \pbreak,
+% \phead,
+% \exec{\textbf{hello}},
+% firstexercise,
+% \select{thirdexercise}{1,2}%
+% }
 % \makeset{11}{secondexercise,
 % firstexercise,
 % thirdexercise%
@@ -40,6 +42,7 @@ firstexercise,
 % }
 
 \begin{document}
-\buildset{11}
+\buildtags{Y,N}{11}
+% \buildset{11}
 % \sprite
 \end{document}
