--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -199,7 +199,8 @@
   \Trigger\VeryBeginProblem%
 }
 \exbank@def@makeset@command{\pbreak}{\clearpage}
-%:=\DeclareExerciseCommand{\dac{command}}{actions}
+%:-
+%:=\DeclareExerciseCommand{command}{actions}
 %:This can be used later in makesets. E.g.
 %:\DelcareExerciseCommand{\pbreak}\brackets{\clearpage} will make
 %:\pbreak behave like \clearpage in the set:
