--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -49,6 +49,6 @@
     \change{Ability to add front page with the \refKey{front page} setup-key.}
     \change{You can now remove the forced margin setup with \refKey{style margins}.}
 \newversion{@@VERSION @@DATE}
-    \change{Added options for individual part problems using the \dac{\nextproblem}-command}
-    \change{Added tagging for part problems using using the \dac{\nextproblem}-command and \dac{\buildtags}-commands.}
+    \change{Added options for individual part problems using the \dac{nextproblem}-command}
+    \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
 \chlogtable
