--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -89,7 +89,7 @@
 \else{\exbank@opt@partProblemHeader}\fi%
 \ignorespaces}%
 \At\EndPartproblem{%
-	\egroup%
+	% \egroup%
 	\vspace*{\pMarginBelow}%
 	\tighten@paragraph\par%
 }
