--- a/src/main.tex
+++ b/src/main.tex
@@ -15,6 +15,8 @@
 \def\hello{\textbf{Hello}}
 \def\asdf#1{\@latex@warning{Called hello}#1}
 % Testing all makeset functions
+% \makeset{11}{firstexercise, \exclude{secondexercise}{1,2}, thirdexercise}
+% \makeset{11}{\exclude{secondexercise}{1,2}}
 \makeset{11}{secondexercise}
 
 % \makeset[nohead,intro]{11}{%
@@ -42,7 +44,7 @@
 % }
 
 \begin{document}
-\buildtags{Y,N}{11}
-% \buildset{11}
+% \buildtags{Y,N}{11}
+\buildset{11}
 % \sprite
 \end{document}
