--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -51,4 +51,6 @@
 \newversion{@@VERSION @@DATE}
     \change{Added options for individual part problems using the \dac{nextproblem}-command}
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
+    \change[\gh{thorstengrothe}]{A special thanks to github user \texttt{@thorstengrothe} for doing testing and giving feedback on new features!}
+    \thankyou{\gh{thorstengrothe} -- \ghURL{thorstengrothe}}
 \chlogtable
