--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.1-prereleaseb76 - 2018/08/23
-%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/08/23) build 76
+%% exercisebank v0.2.1-prereleaseb77 - 2018/08/26
+%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/08/26) build 77
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -45,7 +45,13 @@
     drop fuzzy shadow,#1}
   \def\l@macro#1#2{#1\hfill\newline}
 \newcommand\macrotable{\hypersetup{linkcolor=black}\@starttoc{mac}\hypersetup{linkcolor=Definition}}
-\newcommand\gh[1]{\href{#1}{https://github.com/#1}}
+\newcommand\gh[1]{\href{https://github.com/#1}{#1}}
+\newcommand\ghURL[1]{\href{https://github.com/#1}{https://github.com/#1}}
+\providecommand\thankyous{}
+\providecommand\@thankyous@content{}
+\AtEndDocument{\write\@auxout{\string\gdef\string\thankyous{\@thankyous@content}}}
+\gdef\thankyou#1{\g@addto@macro\@thankyous@content{#1\,}}
+\gdef\footxt#1{\protected@xdef\@thefnmark{}\@footnotetext{#1}}
 % --- CHANGELOG TABLE --- %
 \newcommand*\l@version[2]{%
   \ifnum \c@tocdepth >\z@
@@ -99,13 +105,13 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.1-prerelease{\\[-0.5em]\footnotesize(build 76)}}}
+\title{{exercisebank - manual\\ v0.2.1-prerelease{\\[-0.5em]\footnotesize(build 77)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
  
 If you found any bugs or want new functionality, to contribute, view the commented source, get latest version of this package or get in touch with me, you can do all of that at \url{https://github.com/Strauman/exercisebank/}. If you have questions of functionality, kindly direct them to the community\\ \url{http://tex.stackexchange.com}. The author is active on this site regularly.
-
+If you feel up for it, you can always find the latest development version online, and I always need people to test -- it saves me a lot of time! \if\thankyous\relax\else\footxt{Special thanks to these contributors: \thankyous}\fi
 \tableofcontents
 \clearpage
 \section{Motivation}
@@ -359,7 +365,7 @@ This command will generate multiple sets:
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildtags}{\marg{tagslist}\marg{setslist}}\addcontentsline{toc}{subsubsection}{\refCom{buildtags}}
-\defnew{v0.2.1-prerelease\\2018/08/23 }
+\defnew{v0.2.1-prerelease\\2018/08/26 }
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{tag,tag2,tag3}{set,set2,set3}
@@ -464,7 +470,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\defnew{v0.2.1-prerelease\\2018/08/23 }
+\defnew{v0.2.1-prerelease\\2018/08/26 }
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -667,8 +673,10 @@ Distance above Problem \# header
     \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
     \change{Ability to add front page with the \refKey{front page} setup-key.}
     \change{You can now remove the forced margin setup with \refKey{style margins}.}
-\newversion{v0.2.1-prerelease 2018/08/23}
+\newversion{v0.2.1-prerelease 2018/08/26}
     \change{Added options for individual part problems using the \dac{nextproblem}-command}
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
+    \change[\gh{thorstengrothe}]{A special thanks to github user \texttt{@thorstengrothe} for doing testing and giving feedback on new features!}
+    \thankyou{\gh{thorstengrothe} -- \ghURL{thorstengrothe}}
 \chlogtable
  \end{document}
