--- a/src/main.tex
+++ b/src/main.tex
@@ -17,17 +17,17 @@
 % Testing all makeset functions
 % \makeset{11}{firstexercise, \exclude{secondexercise}{1,2}, thirdexercise}
 % \makeset{11}{\exclude{secondexercise}{1,2}}
-\makeset{11}{secondexercise}
+% \makeset{11}{secondexercise}
 
-% \makeset[nohead,intro]{11}{%
-% \phead,
-% \exclude{secondexercise}{2,3},
-% \pbreak,
-% \phead,
-% \exec{\textbf{hello}},
-% firstexercise,
-% \select{thirdexercise}{1,2}%
-% }
+\makeset[nohead,intro]{11}{%
+\phead,
+\exclude{secondexercise}{2,3},
+\pbreak,
+\phead,
+\exec{\textbf{hello}},
+firstexercise,
+\select{thirdexercise}{1,2}%
+}
 % \makeset{11}{secondexercise,
 % firstexercise,
 % thirdexercise%
@@ -42,7 +42,7 @@
 % \At\StartBuildset{
 % BEFORE THE SET
 % }
-
+\ShowNumbers
 \begin{document}
 % \buildtags{Y,N}{11}
 \buildset{11}
